--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -21,9 +21,13 @@ jobs:
         id: release_drafter
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: bump version
+      - name: bump version and publish
         run: |
-          sed -i 's/VERSION = .*/VERSION = "${{ steps.release_drafter.outputs.tag_name }}"/' lib/google-oauth-cli/version.rb
+          TAG_NAME=${{ steps.release_drafter.outputs.tag_name }}
+          VERSION=${TAG_NAME#"v"}
+          sed -i "s/VERSION = .*/VERSION = \"$VERSION\"/" lib/google-oauth-cli/version.rb
+          bundle config unset deployment
+          bundle install
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
           git add .
