:green_heart: fix released version

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -22,12 +22,10 @@ jobs:
           ruby-version: 3.2
           bundler-cache: true
       - uses: release-drafter/release-drafter@v5
-        id: release_drafter_publish
-        with:
-          publish: true
+        id: release_drafter
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: bump version and publish
+      - name: bump version
         run: |
           TAG_NAME=${{ steps.release_drafter.outputs.tag_name }}
           VERSION=${TAG_NAME#"v"}
@@ -39,6 +37,13 @@ jobs:
           git add .
           git commit -m ":bookmark: version bump"
           git push
+      - uses: release-drafter/release-drafter@v5
+        with:
+          publish: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: publish to rubygems
+        run: |
           bundle exec rake release
         env:
           GEM_HOST_API_KEY: ${{ secrets.GEM_HOST_API_KEY }}
